--- a/crates/rnote-ui/data/ui/penssidebar/penssidebar.ui
+++ b/crates/rnote-ui/data/ui/penssidebar/penssidebar.ui
@@ -9,6 +9,8 @@
       <object class="GtkStack" id="sidebar_stack">
         <property name="transition_duration">300</property>
         <property name="transition_type">GTK_STACK_TRANSITION_TYPE_SLIDE_LEFT_RIGHT</property>
+        <property name="vexpand">false</property>
+        <property name="vhomogeneous">false</property>
 
         <!-- Brush Page -->
         <child>
